configs/prod/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  name: poll-ingress
  annotations: 
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: poll-svc
              port:
                number: 8000
        - path: /polls
          pathType: Prefix
          backend:
            service:
              name: poll-svc
              port: 
                number: 8000
